export const ANALYTICS_KEY = {
  ONBOARD: '온보딩',
  CHAT: '채팅',
  ACT: {
    ANCHOR: {
      FIVE: '5-4-3-2-1',
    },
    DIARY: {
      EMOTION: '감정 일기',
    },
    DETACH: {
      SEPARATE: '생각과 사실 분리하기',
    },
    EMBRACE: {
      DEEPEN: '호흡법',
    },
    ACTION: {
      VALUES: '가치와 전념행동',
    },
  },
};
