export const CBT_MENU_LIST = [
  {
    label: '인지재구성',
    slug: 'recognition',
  },
  {
    label: '호흡법',
    slug: 'breathing',
  },
  {
    label: '진정문구',
    slug: 'calm',
  },
  {
    label: '5-4-3-2-1',
    slug: 'grounding',
  },
  // {
  //   label: '일기',
  //   slug: 'diary',
  // },
  {
    label: '학습',
    slug: 'learning',
  },
];
